[Document] Update swagger with API response from entity-repo.
