# docs/swagger.yaml
@@ -63,6 +63,44 @@ definitions:
     - password
     - username
     type: object
+  api.TransactionResponse:
+    properties:
+      amount:
+        type: number
+      createdAt:
+        type: string
+      currency:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      message:
+        maxLength: 200
+        type: string
+      name:
+        type: string
+      receiver_id:
+        type: integer
+      receiver_pk:
+        type: string
+      sender_id:
+        type: integer
+      sender_pk:
+        type: string
+      show_type:
+        type: string
+      status:
+        type: string
+      updatedAt:
+        type: string
+    required:
+    - amount
+    - currency
+    - name
+    - receiver_pk
+    - sender_pk
+    type: object
   api.UpdateTransactionRequest:
     properties:
       message:
@@ -157,44 +195,6 @@ definitions:
     required:
     - phone
     type: object
-  github.com_Melon-Network-Inc_payment-service_pkg_transaction.Transaction:
-    properties:
-      amount:
-        type: number
-      createdAt:
-        type: string
-      currency:
-        type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
-      id:
-        type: integer
-      message:
-        maxLength: 200
-        type: string
-      name:
-        type: string
-      receiver_id:
-        type: integer
-      receiver_pk:
-        type: string
-      sender_id:
-        type: integer
-      sender_pk:
-        type: string
-      show_type:
-        type: string
-      status:
-        type: string
-      updatedAt:
-        type: string
-    required:
-    - amount
-    - currency
-    - name
-    - receiver_pk
-    - sender_pk
-    type: object
   gorm.DeletedAt:
     properties:
       time:
@@ -202,44 +202,6 @@ definitions:
       valid:
         description: Valid is true if Time is not NULL
         type: boolean
-    type: object
-  pkg_transaction.Transaction:
-    properties:
-      amount:
-        type: number
-      createdAt:
-        type: string
-      currency:
-        type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
-      id:
-        type: integer
-      message:
-        maxLength: 200
-        type: string
-      name:
-        type: string
-      receiver_id:
-        type: integer
-      receiver_pk:
-        type: string
-      sender_id:
-        type: integer
-      sender_pk:
-        type: string
-      show_type:
-        type: string
-      status:
-        type: string
-      updatedAt:
-        type: string
-    required:
-    - amount
-    - currency
-    - name
-    - receiver_pk
-    - sender_pk
     type: object
   user.User:
     properties:
@@ -653,7 +615,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pkg_transaction.Transaction'
+            $ref: '#/definitions/api.TransactionResponse'
         "400":
           description: ""
         "404":
@@ -679,7 +641,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/pkg_transaction.Transaction'
+              $ref: '#/definitions/api.TransactionResponse'
             type: array
         "404":
           description: ""
@@ -704,7 +666,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/pkg_transaction.Transaction'
+            $ref: '#/definitions/api.TransactionResponse'
         "400":
           description: ""
         "404":
@@ -730,7 +692,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pkg_transaction.Transaction'
+            $ref: '#/definitions/api.TransactionResponse'
         "400":
           description: ""
         "404":
@@ -756,7 +718,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pkg_transaction.Transaction'
+            $ref: '#/definitions/api.TransactionResponse'
         "404":
           description: ""
       summary: Get a transaction
